// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WrappedCustomMultiSelect /> matches snapshot when focused 1`] = `
"
<div class=\\" css-b62m3t-container\\">
  <span
    id=\\"react-select-3-live-region\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
    <span id=\\"aria-selection\\">
      option , selected.
    </span>
    <span id=\\"aria-context\\">
      Select is focused ,type to refine list, press Down to open the menu,
    </span>
  </span>
  <span
    aria-live=\\"polite\\"
    aria-atomic=\\"false\\"
    aria-relevant=\\"additions text\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <div class=\\" css-11rrdhm-control\\">
    <div class=\\" css-1kabp7a-ValueContainer\\">
      <div
        class=\\" css-14el2xx-placeholder\\"
        id=\\"react-select-3-placeholder\\"
      >
        Select...
      </div>
      <div
        class=\\" css-dmcbcz-Input\\"
        data-value
      >
        <input
          class
          style=\\"opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;\\"
          autocapitalize=\\"none\\"
          autocomplete=\\"off\\"
          autocorrect=\\"off\\"
          id=\\"react-select-3-input\\"
          spellcheck=\\"false\\"
          tabindex=\\"0\\"
          type=\\"text\\"
          aria-autocomplete=\\"list\\"
          aria-expanded=\\"false\\"
          aria-haspopup=\\"true\\"
          role=\\"combobox\\"
          aria-describedby=\\"react-select-3-placeholder\\"
          value
        >
      </div>
    </div>
    <div class=\\" css-vcwr3k-IndicatorsContainer\\">
      <span class=\\" css-1okebmr-indicatorSeparator\\">
      </span>
      <div
        class=\\" css-1ij327q-indicatorContainer\\"
        aria-hidden=\\"true\\"
      >
        <svg
          height=\\"20\\"
          width=\\"20\\"
          viewbox=\\"0 0 20 20\\"
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          class=\\"css-tj5bde-Svg\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<WrappedCustomMultiSelect /> matches snapshot when focused and disabled 1`] = `
"
<div class=\\" css-3iigni-container\\">
  <span
    id=\\"react-select-4-live-region\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
    <span id=\\"aria-selection\\">
      option , selected.
    </span>
    <span id=\\"aria-context\\">
      Select is focused ,type to refine list, press Down to open the menu,
    </span>
  </span>
  <span
    aria-live=\\"polite\\"
    aria-atomic=\\"false\\"
    aria-relevant=\\"additions text\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <div class=\\" css-1tnfzgk-control\\">
    <div class=\\" css-1kabp7a-ValueContainer\\">
      <div
        class=\\" css-14el2xx-placeholder\\"
        id=\\"react-select-4-placeholder\\"
      >
        Select...
      </div>
      <div
        class=\\" css-9ehl8g-Input\\"
        data-value
      >
        <input
          class
          style=\\"opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;\\"
          disabled
          autocapitalize=\\"none\\"
          autocomplete=\\"off\\"
          autocorrect=\\"off\\"
          id=\\"react-select-4-input\\"
          spellcheck=\\"false\\"
          tabindex=\\"0\\"
          type=\\"text\\"
          aria-autocomplete=\\"list\\"
          aria-expanded=\\"false\\"
          aria-haspopup=\\"true\\"
          role=\\"combobox\\"
          aria-describedby=\\"react-select-4-placeholder\\"
          value
        >
      </div>
    </div>
    <div class=\\" css-15bdmde-IndicatorsContainer\\">
      <span class=\\" css-109onse-indicatorSeparator\\">
      </span>
      <div
        class=\\" css-1ij327q-indicatorContainer\\"
        aria-hidden=\\"true\\"
      >
        <svg
          height=\\"20\\"
          width=\\"20\\"
          viewbox=\\"0 0 20 20\\"
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          class=\\"css-tj5bde-Svg\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<WrappedCustomMultiSelect /> matches snapshot with a value 1`] = `
"
<div class=\\" css-b62m3t-container\\">
  <span
    id=\\"react-select-5-live-region\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <span
    aria-live=\\"polite\\"
    aria-atomic=\\"false\\"
    aria-relevant=\\"additions text\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <div class=\\" css-n90zkc-control\\">
    <div class=\\" css-1kabp7a-ValueContainer\\">
      <div class=\\" css-bgy71k-singleValue\\">
        foo
      </div>
      <div
        class=\\" css-dmcbcz-Input\\"
        data-value
      >
        <input
          class
          style=\\"opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;\\"
          autocapitalize=\\"none\\"
          autocomplete=\\"off\\"
          autocorrect=\\"off\\"
          id=\\"react-select-5-input\\"
          spellcheck=\\"false\\"
          tabindex=\\"0\\"
          type=\\"text\\"
          aria-autocomplete=\\"list\\"
          aria-expanded=\\"false\\"
          aria-haspopup=\\"true\\"
          role=\\"combobox\\"
          value
        >
      </div>
    </div>
    <div class=\\" css-vcwr3k-IndicatorsContainer\\">
      <span class=\\" css-1okebmr-indicatorSeparator\\">
      </span>
      <div
        class=\\" css-tlfecz-indicatorContainer\\"
        aria-hidden=\\"true\\"
      >
        <svg
          height=\\"20\\"
          width=\\"20\\"
          viewbox=\\"0 0 20 20\\"
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          class=\\"css-tj5bde-Svg\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<WrappedCustomMultiSelect /> matches snapshot with isDisabled=true 1`] = `
"
<div class=\\" css-3iigni-container\\">
  <span
    id=\\"react-select-7-live-region\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <span
    aria-live=\\"polite\\"
    aria-atomic=\\"false\\"
    aria-relevant=\\"additions text\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <div class=\\" css-1imhm17-control\\">
    <div class=\\" css-1kabp7a-ValueContainer\\">
      <div class=\\" css-bgy71k-singleValue\\">
        foo
      </div>
      <div
        class=\\" css-9ehl8g-Input\\"
        data-value
      >
        <input
          class
          style=\\"opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;\\"
          disabled
          autocapitalize=\\"none\\"
          autocomplete=\\"off\\"
          autocorrect=\\"off\\"
          id=\\"react-select-7-input\\"
          spellcheck=\\"false\\"
          tabindex=\\"0\\"
          type=\\"text\\"
          aria-autocomplete=\\"list\\"
          aria-expanded=\\"false\\"
          aria-haspopup=\\"true\\"
          role=\\"combobox\\"
          value
        >
      </div>
    </div>
    <div class=\\" css-15bdmde-IndicatorsContainer\\">
      <span class=\\" css-109onse-indicatorSeparator\\">
      </span>
      <div
        class=\\" css-tlfecz-indicatorContainer\\"
        aria-hidden=\\"true\\"
      >
        <svg
          height=\\"20\\"
          width=\\"20\\"
          viewbox=\\"0 0 20 20\\"
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          class=\\"css-tj5bde-Svg\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<WrappedCustomMultiSelect /> matches snapshot with isMulti=true 1`] = `
"
<div class=\\" css-b62m3t-container\\">
  <span
    id=\\"react-select-2-live-region\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <span
    aria-live=\\"polite\\"
    aria-atomic=\\"false\\"
    aria-relevant=\\"additions text\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <div class=\\" css-n90zkc-control\\">
    <div class=\\" css-115r1xl-ValueContainer\\">
      <div
        class=\\" css-14el2xx-placeholder\\"
        id=\\"react-select-2-placeholder\\"
      >
        Select...
      </div>
      <div
        class=\\" css-dmcbcz-Input\\"
        data-value
      >
        <input
          class
          style=\\"opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;\\"
          autocapitalize=\\"none\\"
          autocomplete=\\"off\\"
          autocorrect=\\"off\\"
          id=\\"react-select-2-input\\"
          spellcheck=\\"false\\"
          tabindex=\\"0\\"
          type=\\"text\\"
          aria-autocomplete=\\"list\\"
          aria-expanded=\\"false\\"
          aria-haspopup=\\"true\\"
          role=\\"combobox\\"
          aria-describedby=\\"react-select-2-placeholder\\"
          value
        >
      </div>
    </div>
    <div class=\\" css-vcwr3k-IndicatorsContainer\\">
      <span class=\\" css-1okebmr-indicatorSeparator\\">
      </span>
      <div
        class=\\" css-tlfecz-indicatorContainer\\"
        aria-hidden=\\"true\\"
      >
        <svg
          height=\\"20\\"
          width=\\"20\\"
          viewbox=\\"0 0 20 20\\"
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          class=\\"css-tj5bde-Svg\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<WrappedCustomMultiSelect /> matches snapshot with isMulti=true and a value 1`] = `
"
<div class=\\" css-b62m3t-container\\">
  <span
    id=\\"react-select-6-live-region\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <span
    aria-live=\\"polite\\"
    aria-atomic=\\"false\\"
    aria-relevant=\\"additions text\\"
    class=\\"css-1f43avz-a11yText-A11yText\\"
  >
  </span>
  <div class=\\" css-n90zkc-control\\">
    <div class=\\" css-115r1xl-ValueContainer\\">
      <div class=\\"css-owt1hd-multiValue\\">
        <div class=\\"css-xbn6jz\\">
          foo
        </div>
        <div
          role=\\"button\\"
          class=\\"css-1ucqin4\\"
          aria-label=\\"Remove foo\\"
        >
          <svg
            height=\\"14\\"
            width=\\"14\\"
            viewbox=\\"0 0 20 20\\"
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            class=\\"css-tj5bde-Svg\\"
          >
            <path d=\\"M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z\\">
            </path>
          </svg>
        </div>
      </div>
      <div
        class=\\" css-dmcbcz-Input\\"
        data-value
      >
        <input
          class
          style=\\"opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;\\"
          autocapitalize=\\"none\\"
          autocomplete=\\"off\\"
          autocorrect=\\"off\\"
          id=\\"react-select-6-input\\"
          spellcheck=\\"false\\"
          tabindex=\\"0\\"
          type=\\"text\\"
          aria-autocomplete=\\"list\\"
          aria-expanded=\\"false\\"
          aria-haspopup=\\"true\\"
          role=\\"combobox\\"
          value
        >
      </div>
    </div>
    <div class=\\" css-vcwr3k-IndicatorsContainer\\">
      <div
        class=\\" css-tlfecz-indicatorContainer\\"
        aria-hidden=\\"true\\"
      >
        <svg
          height=\\"20\\"
          width=\\"20\\"
          viewbox=\\"0 0 20 20\\"
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          class=\\"css-tj5bde-Svg\\"
        >
          <path d=\\"M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z\\">
          </path>
        </svg>
      </div>
      <span class=\\" css-1okebmr-indicatorSeparator\\">
      </span>
      <div
        class=\\" css-tlfecz-indicatorContainer\\"
        aria-hidden=\\"true\\"
      >
        <svg
          height=\\"20\\"
          width=\\"20\\"
          viewbox=\\"0 0 20 20\\"
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          class=\\"css-tj5bde-Svg\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;
